--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ panel
 jupyter_bokeh
 openml
 ucimlrepo
-openai==1.19.0
+# openai==1.19.0
 PyPDF2
 pdfkit
 autogluon
@@ -17,4 +17,125 @@ quantstats
 autokeras
 kglab
 rdflib
-pyvis
+pyvisannotated-types==0.7.0
+anyio==4.4.0
+arxiv==2.1.3
+asttokens==2.4.1
+beautifulsoup4==4.12.3
+bleach==6.1.0
+bokeh==3.4.3
+certifi==2024.8.30
+charset-normalizer==3.3.2
+comm==0.2.2
+contourpy==1.3.0
+cycler==0.12.1
+dateparser==1.2.0
+debugpy==1.8.5
+decorator==5.1.1
+dill==0.3.8
+distro==1.9.0
+docx==0.2.4
+et-xmlfile==1.1.0
+executing==2.0.1
+feedparser==6.0.11
+fonttools==4.53.1
+frozendict==2.4.4
+h11==0.14.0
+html5lib==1.1
+httpcore==1.0.5
+httpx==0.27.2
+idna==3.8
+imageio==2.35.1
+importlib_resources==6.4.4
+ipykernel==6.29.5
+ipython==8.27.0
+ipywidgets==8.1.5
+isodate==0.6.1
+jedi==0.19.1
+Jinja2==3.1.4
+jiter==0.5.0
+joblib==1.4.2
+jsonpickle==3.3.0
+jupyter_bokeh==4.0.5
+jupyter_client==8.6.2
+jupyter_core==5.7.2
+jupyterlab_widgets==3.0.13
+kiwisolver==1.4.5
+linkify-it-py==2.0.3
+llvmlite==0.43.0
+lxml==5.3.0
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+matplotlib==3.9.2
+matplotlib-inline==0.1.7
+mdit-py-plugins==0.4.1
+mdurl==0.1.2
+multitasking==0.0.11
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.3
+numba==0.60.0
+numpy==1.26.4
+openai==1.43.0
+openpyxl==3.1.5
+packaging==24.1
+pandas==2.2.2
+panel==1.4.5
+param==2.1.1
+parso==0.8.4
+peewee==3.17.6
+pexpect==4.9.0
+pillow==10.4.0
+platformdirs==4.2.2
+plotly==5.24.0
+prompt_toolkit==3.0.47
+psutil==6.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pyparsing==3.1.4
+PyPDF2==3.0.1
+pytesseract==0.3.13
+python-dateutil==2.9.0.post0
+python-docx==1.1.2
+pytz==2024.1
+pyvis==0.3.2
+pyviz_comms==3.0.3
+PyYAML==6.0.2
+pyzmq==26.2.0
+QuantStats==0.0.62
+rdflib==7.0.0
+regex==2024.7.24
+requests==2.32.3
+schedule==1.2.2
+scikit-learn==1.5.1
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==74.0.0
+sgmllib3k==1.0.0
+six==1.16.0
+sniffio==1.3.1
+soupsieve==2.6
+stack-data==0.6.3
+sweetviz==2.3.1
+tabulate==0.9.0
+tenacity==9.0.0
+threadpoolctl==3.5.0
+tornado==6.4.1
+tqdm==4.66.5
+traitlets==5.14.3
+typing_extensions==4.12.2
+tzdata==2024.1
+tzlocal==5.2
+uc-micro-py==1.0.3
+ucimlrepo==0.0.7
+urllib3==2.2.2
+vectorbt==0.26.2
+wcwidth==0.2.13
+webencodings==0.5.1
+widgetsnbextension==4.0.13
+xyzservices==2024.6.0
+yfinance==0.2.43
